task list:   - fixed column height   - implemented long task name overflow ellipsis
sub-task list:
  - implemented long task name overflow ellipsis
  - updated user assignee dropdown styles
  - changed user assignee placeholder styles and icon
  - fixed margins
  - changed arrow column icon, updated styles
  - changed time font weight

--- a/packages/custom/icu/public/assets/css/_detailspane.scss
+++ b/packages/custom/icu/public/assets/css/_detailspane.scss
@@ -638,8 +638,7 @@ $tab-content-height: calc(100% - #{$description-height} - #{$switcher-height} - 
         }
     }
 
-
-    .location,  {
+    .location  {
         .placeholder {
             position: absolute;
             top: 50%;
