--- a/packages/custom/icu/public/assets/css/_panes.scss
+++ b/packages/custom/icu/public/assets/css/_panes.scss
@@ -10,6 +10,7 @@
                     cursor: pointer;
                     display: flex;
                     justify-content: space-between;
+                    align-items: center;
                     &.active {
                         background-color: $grey;
                         color: white;
